manifests/gateway/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-all-routes
  namespace: default
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: argocd
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: ecosystem
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: developer-portal
  to:
    - group: ""
      kind: Gateway
      name: idp-gateway
