manifests/gateway/apps-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tm-api-route
  namespace: ecosystem
spec:
  parentRefs:
    - name: idp-gateway
      namespace: default
  hostnames: ["tm-api.attalea.pw"]
  rules:
    - matches: [{ path: { type: PathPrefix, value: / } }]
      backendRefs:
        - name: task-manager
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tm-route
  namespace: ecosystem
spec:
  parentRefs:
    - name: idp-gateway
      namespace: default
  hostnames: ["tm.attalea.pw"]
  rules:
    - matches: [{ path: { type: PathPrefix, value: / } }]
      backendRefs:
        - name: task-manager-frontend
          port: 80
