manifests/gateway/backstage-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage-route
  namespace: developer-portal
spec:
  parentRefs:
    - name: idp-gateway
      namespace: default
  hostnames: ["portal.attalea.pw"]
  rules:
    - matches: [{ path: { type: PathPrefix, value: / } }]
      backendRefs:
        - name: backstage
          port: 7007
